fix issue 107, make JMSTestRunner URI compatible with Unix Filesystem